# realm-dart-ffi

./: .gitignore  .gitmodules  README.md  analysis_options.yaml  pubspec.yaml
example/: main.dart
example/model/: dog.dart  dog.g.dart  person.dart  person.g.dart  realmmodule.dart  realmmodule.g.dart
lib/src/cpp/: CMakeLists.txt  database.cpp  database.h  wrapper.cpp  wrapper.h
lib/src/dart/: database.dart  realm.dart  realm_configuration.dart  realm_list.dart  realm_model.dart  realm_results.dart  realm_schema.dart  realmconfiguration.dart  realmlist.dart  realmmodel.dart  realmresults.dart  realmschema.dart
lib/src/dart/bindings/: bindings.dart  signatures.dart  types.dart
lib/src/dart/ffi/: arena.dart  dylib_utils.dart  utf8.dart
lib/test/: api_test.dart  constants.dart
lib/test/model/: dog.dart  dog.g.dart  realm_module.dart  realm_module.g.dart  realmmodule.dart  realmmodule.g.dart
